--- a/MapKit_Test2/Base.lproj/Main.storyboard
+++ b/MapKit_Test2/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,158 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MapKit_Test2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x4x-XD-wQb">
+                                <rect key="frame" x="0.0" y="451" width="375" height="100"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ueG-No-QjE"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ywQ-us-hUm"/>
+                                </connections>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bzn-44-Gkx">
+                                <rect key="frame" x="137.5" y="559" width="100" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="R2z-h7-oYo"/>
+                                    <constraint firstAttribute="height" constant="50" id="uRB-Ae-GvG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="PUSH">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="pushBtnWasPresset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cTs-6b-gve"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Oad-ZF-ajv">
+                                <rect key="frame" x="0.0" y="20" width="375" height="256"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="256" id="q1P-Nh-1px"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNY-xM-voA">
+                                <rect key="frame" x="16" y="301" width="343" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XGZ-BG-7KT">
+                                <rect key="frame" x="16" y="331.5" width="343" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="Fcd-7t-1R1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BFZ-19-Yyx">
+                                <rect key="frame" x="175" y="418.5" width="25" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="25" id="64g-xg-dtB"/>
+                                    <constraint firstAttribute="height" constant="25" id="dvx-Pf-Pv1"/>
+                                </constraints>
+                                <state key="normal" image="location"/>
+                                <connections>
+                                    <segue destination="PE8-tS-Ckf" kind="presentation" identifier="mapSegue" id="Pzb-yW-2zB"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1803921568627451" green="0.63921568627450975" blue="0.92156862745098034" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Bzn-44-Gkx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2p6-OG-FNb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XGZ-BG-7KT" secondAttribute="trailing" constant="16" id="3Qq-c8-Fnc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rNY-xM-voA" secondAttribute="trailing" constant="16" id="AdS-KI-5Tx"/>
+                            <constraint firstItem="rNY-xM-voA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="EkI-yL-frH"/>
+                            <constraint firstItem="Oad-ZF-ajv" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="I6d-cM-oxS"/>
+                            <constraint firstItem="Bzn-44-Gkx" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="250.5" id="WaS-OV-3qE"/>
+                            <constraint firstItem="BFZ-19-Yyx" firstAttribute="top" secondItem="XGZ-BG-7KT" secondAttribute="bottom" constant="7" id="XGY-af-3me"/>
+                            <constraint firstItem="Oad-ZF-ajv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Ygc-g7-Fss"/>
+                            <constraint firstItem="Oad-ZF-ajv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bGW-mX-59q"/>
+                            <constraint firstItem="BFZ-19-Yyx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gBF-YZ-fZk"/>
+                            <constraint firstItem="rNY-xM-voA" firstAttribute="top" secondItem="Oad-ZF-ajv" secondAttribute="bottom" constant="25" id="p3A-0Q-6LI"/>
+                            <constraint firstItem="XGZ-BG-7KT" firstAttribute="top" secondItem="rNY-xM-voA" secondAttribute="bottom" constant="10" id="pjX-MQ-jCm"/>
+                            <constraint firstItem="XGZ-BG-7KT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="y2p-Eh-Qzm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="discLable" destination="XGZ-BG-7KT" id="goa-9W-m6Q"/>
+                        <outlet property="myImageView" destination="Oad-ZF-ajv" id="XMn-kB-GYS"/>
+                        <outlet property="pikerView" destination="x4x-XD-wQb" id="kbz-us-zE6"/>
+                        <outlet property="titleLable" destination="rNY-xM-voA" id="ggD-c8-7vP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="40.799999999999997" y="26.53673163418291"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="fVf-z2-P2x">
+            <objects>
+                <viewController id="PE8-tS-Ckf" customClass="MapViewController" customModule="MapKit_Test2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MVV-Po-m71">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Ot-vR-hZq">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <connections>
+                                    <outlet property="delegate" destination="PE8-tS-Ckf" id="gWf-7k-if6"/>
+                                </connections>
+                            </mapView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dbu-wy-Wt7">
+                                <rect key="frame" x="218" y="619" width="141" height="29"/>
+                                <segments>
+                                    <segment title="Standard"/>
+                                    <segment title="Satellite"/>
+                                </segments>
+                                <connections>
+                                    <action selector="changeMapType:" destination="PE8-tS-Ckf" eventType="valueChanged" id="l8h-04-8rF"/>
+                                </connections>
+                            </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rXu-mB-my7">
+                                <rect key="frame" x="16" y="619" width="70" height="28"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="5BQ-lT-kNP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
+                                <state key="normal" title="Close">
+                                    <color key="titleColor" red="0.71764705882352942" green="0.78823529411764703" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="closeBtnWasPressed:" destination="PE8-tS-Ckf" eventType="touchUpInside" id="W2W-DX-y7f"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8Ot-vR-hZq" firstAttribute="trailing" secondItem="CcO-6W-GHB" secondAttribute="trailing" id="2fg-cp-egR"/>
+                            <constraint firstItem="8Ot-vR-hZq" firstAttribute="bottom" secondItem="CcO-6W-GHB" secondAttribute="bottom" id="BS9-7J-jCt"/>
+                            <constraint firstItem="rXu-mB-my7" firstAttribute="leading" secondItem="CcO-6W-GHB" secondAttribute="leading" constant="16" id="JVP-Ef-p6e"/>
+                            <constraint firstItem="CcO-6W-GHB" firstAttribute="bottom" secondItem="rXu-mB-my7" secondAttribute="bottom" constant="20" id="XPK-yj-4ed"/>
+                            <constraint firstItem="CcO-6W-GHB" firstAttribute="trailing" secondItem="dbu-wy-Wt7" secondAttribute="trailing" constant="16" id="gXb-0B-kE6"/>
+                            <constraint firstItem="8Ot-vR-hZq" firstAttribute="top" secondItem="MVV-Po-m71" secondAttribute="top" id="hGs-EL-Rcx"/>
+                            <constraint firstItem="8Ot-vR-hZq" firstAttribute="leading" secondItem="CcO-6W-GHB" secondAttribute="leading" id="qRY-YF-wnK"/>
+                            <constraint firstItem="CcO-6W-GHB" firstAttribute="bottom" secondItem="dbu-wy-Wt7" secondAttribute="bottom" constant="20" id="yKy-gM-EuK"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="CcO-6W-GHB"/>
+                    </view>
+                    <connections>
+                        <outlet property="closeBtn" destination="rXu-mB-my7" id="Flp-c4-ZnF"/>
+                        <outlet property="mapView" destination="8Ot-vR-hZq" id="fcc-I9-7Ml"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qb2-kG-zkZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="776.79999999999995" y="26.53673163418291"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="location" width="50" height="50"/>
+    </resources>
 </document>
